# DocuQuery

./: .dockerignore  Dockerfile  Makefile  README.md  app.py  chainlit.md  pyproject.toml
.chainlit/: config.toml
src/: raqa.py  text_utils.py  vectordatabase.py
src/openai_utils/: chatmodel.py  embedding.py
