[tool.poetry]
name = "raqa"
version = "0.1.0"
description = "env for raqa app"
authors = ["Juan Ovalle <jj.ovalle@uniandes.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
openai = "^1.3.7"
chainlit = "^0.7.700"
wandb = "^0.16.0"



[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
